Bug 393498 ? on cut, then undo of a bookmark, we lose the dateAdded and lastModified values (r=mano)